--- a/warranty/pubspec.yaml
+++ b/warranty/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   animated_notch_bottom_bar: ^0.0.6
   camera: ^0.10.4
+  cloud_firestore: ^4.5.3
+  firebase_core: ^2.10.0
 
 dev_dependencies:
   flutter_test:
