--- a/warranty/android/app/build.gradle
+++ b/warranty/android/app/build.gradle
@@ -73,4 +73,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-firestore-ktx'
+    implementation 'com.google.firebase:firebase-auth:19.3.2'
 }
