--- a/warranty/pubspec.yaml
+++ b/warranty/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -40,6 +41,8 @@ dependencies:
   camera: ^0.10.4
   cloud_firestore: ^4.5.3
   firebase_core: ^2.10.0
+  firebase_auth: ^4.3.0
+
 
 dev_dependencies:
   flutter_test:
