--- a/warranty/pubspec.yaml
+++ b/warranty/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cloud_firestore: ^4.5.3
   firebase_core: ^2.10.0
   firebase_auth: ^4.3.0
+  intl: ^0.18.1
 
 
 dev_dependencies:
